[package]
name = "circleci-api-cli"
version = "0.1.0"
authors = ["Benjamin Sproule <benjamin@benjaminsproule.com>"]
description = "A CLI to call the CircleCI API"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
log4rs = "1.3.0"
structopt = "0.3.26"
dirs = "5.0.1"
reqwest = {version="0.12.0", features=["blocking", "json"]}
yaml = "0.3.0"
serde = {version="1.0.197", features=["derive"]}
serde_yaml = "0.9.33"
serde_json = "1.0.114"
maplit = "1.0.2"
